--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
 .App {
   text-align: center;
+  width: 500px;
+  border: 15px solid green;
+  padding: 20px;
+  margin:auto;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
   color: white;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width:20%
+ 
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #fdfdfd;
+  color: #4CAF50;
+  border-radius:15px;
+  border: 2px solid #4CAF50
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ 
